<?xml version="1.0" encoding="utf-8"?>
<!--
    My Notie is a note taking app, write notes and save them to see them and remember later.
    Copyright (C) 2021  Ioannis Xenakis

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.

    Anything you want to contact me for, contact me with an e-mail, at: Xenakis.i.Contact@gmail.com
    I'll be happy to help you, or discuss anything with you! -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- The top title bar with app name -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <!-- The title bar backround -->
        <ImageView
            android:id="@+id/title_bar_background"
            android:layout_width="300dp"
            android:layout_height="21dp"
            android:background="@drawable/top_bar_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <!-- The app name text -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/app_name_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- The bar with buttons -->
    <RelativeLayout
        android:id="@+id/bar_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_bar_buttons_height"
        android:layout_below="@id/title_bar"
        android:background="@drawable/bar_no_shadows"
        android:layout_marginStart="@dimen/screen_edge_space"
        android:layout_marginLeft="@dimen/screen_edge_space"
        android:layout_marginEnd="@dimen/screen_edge_space"
        android:layout_marginRight="@dimen/screen_edge_space"
        android:layout_centerInParent="true">

        <!-- A button that opens the Layout/Activity for the notes -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/goBack"
            android:layout_width="@dimen/bar_buttons_width"
            android:layout_height="@dimen/bar_buttons_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="GoBack"
            android:layout_centerVertical="true"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginEnd="@dimen/bar_buttons_space"
            android:layout_marginRight="@dimen/bar_buttons_space"
            app:fabCustomSize="@dimen/fab_size"
            app:srcCompat="@drawable/go_back_icon" />

        <!-- A button that clears all the text in note -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/clearText"
            android:layout_width="@dimen/bar_buttons_width"
            android:layout_height="@dimen/bar_buttons_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginStart="@dimen/bar_buttons_space"
            android:layout_marginLeft="@dimen/bar_buttons_space"
            android:onClick="clearTextButton"
            android:layout_centerVertical="true"
            app:fabCustomSize="@dimen/fab_size"
            app:srcCompat="@drawable/clear_text_icon" />

    </RelativeLayout>

    <view
        android:id="@+id/noteTitle"
        class="com.example.fanatic_coder.mynotepad.MainActivity$LineEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/bar_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/note_title_space"
        android:layout_marginStart="@dimen/screen_edge_space"
        android:layout_marginLeft="@dimen/screen_edge_space"
        android:layout_marginEnd="@dimen/screen_edge_space"
        android:layout_marginRight="@dimen/screen_edge_space"
        android:maxLines="2"
        android:background="@drawable/note_title_background"
        android:gravity="start"
        android:paddingStart="@dimen/write_text_padding"
        android:paddingEnd="@dimen/write_text_padding"
        android:hint="@string/note_title_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@color/color_write_text"
        tools:targetApi="o" />

    <!-- The actual main text to write in Note -->
    <view
        android:id="@+id/noteBodyText"
        class="com.example.fanatic_coder.mynotepad.MainActivity$LineEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteTitle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/note_body_text_margin"
        android:background="@drawable/note_body_text_background"
        android:ems="10"
        android:gravity="start"
        android:paddingStart="@dimen/write_text_padding"
        android:paddingEnd="@dimen/write_text_padding"
        android:hint="@string/note_body_text_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@color/color_write_text"
        tools:targetApi="o" />

</RelativeLayout>