...
    <!-- Menu buttons, that is displayed on top app bar,
     in Edit Note Activity -->

    <!-- The Add To Folders button, to open the Add To Folders Activity,
     to add the note to one or multiple folders. -->
    <item
        android:id="@+id/add_to_folders_button_edit_note"
        android:orderInCategory="100"
        android:title="@string/add_to_folder_button_edit_note"
        android:onClick="onAddToFoldersButtonClick"
        android:icon="@drawable/folder_icon"
        android:contentDescription="@string/content_description_add_to_folders_button"
        app:showAsAction="ifRoom" />
...
